hphp/test/zend/good/tests/classes/private_redeclare.php.expectf
base
test
derived
base

Fatal error: Call to private method base::show() from context 'derived' in %s/private_redeclare.php on line 20
